Ensure scrollbar is always shown.

--- a/themes/RCF-Bootstrap/static/css/rcf-bootstrap.css
+++ b/themes/RCF-Bootstrap/static/css/rcf-bootstrap.css
@@ -1,6 +1,10 @@
 html{
     scroll-behavior: smooth;
     min-width: 320px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    -webkit-font-smoothing: antialiased !important;
+    -moz-osx-font-smoothing: auto !important;
 }
 
 main>.container {
